# brave-core

./: BUILD.gn  DEPS  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags
app/: brave_generated_resources.grd
app/win/: BUILD.gn
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_ads/: ads_service_factory.cc  ads_service_impl.cc  ads_service_impl.h  ads_tab_helper.cc
browser/brave_rewards/: rewards_panel_helper.cc
browser/brave_shields/: ad_block_service_browsertest.cc
browser/brave_wallet/: BUILD.gn  filecoin_keyring_unittest.cc  keyring_service_unittest.cc
browser/ephemeral_storage/: ephemeral_storage_1p_domain_block_browsertest.cc
browser/net/: brave_proxying_url_loader_factory.cc
browser/search_engines/: search_engine_provider_service_browsertest.cc
browser/sync_pairs/: pair_sync_bridge.h  pair_sync_bridge_impl.cc  pair_sync_bridge_impl.h  pair_sync_service.h  pair_sync_service_factory.cc  pair_sync_service_factory.h  pair_sync_service_impl.cc  pair_sync_service_impl.h  sources.gni
browser/ui/: BUILD.gn
common/: webui_url_constants.cc  webui_url_constants.h
components/bls/: buildflags.gni
components/brave_federated/: brave_federated_service.cc  brave_federated_service.h  data_store_service.cc  features.cc
components/brave_federated/resources/: BUILD.gn
components/brave_federated/resources/internals/: BUILD.gn  federated_learning_internals.css  federated_learning_internals.html  federated_learning_internals.js
components/brave_federated_learning/: federated.mojom
components/brave_new_tab_ui/: apiEventsToStore.ts
components/brave_vpn/: brave_vpn_service.cc  (+1 more)
ios/: BUILD.gn
patches/: chrome-VERSION.patch  chrome-browser-about_flags.cc.patch  chrome-browser-sync-sync_service_factory.cc.patch  components-sync-protocol-proto_value_conversions.h.patch  components-sync_device_info-device_info_sync_bridge.cc.patch
test/: BUILD.gn
(+135 files in other folders)
