# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

brave_browser_sync_pairs_sources = [
  "//brave/browser/sync_pairs/pair_sync_bridge.h",
  "//brave/browser/sync_pairs/pair_sync_bridge_impl.cc",
  "//brave/browser/sync_pairs/pair_sync_bridge_impl.h",
  "//brave/browser/sync_pairs/pair_sync_service.h",
  "//brave/browser/sync_pairs/pair_sync_service_impl.cc",
  "//brave/browser/sync_pairs/pair_sync_service_impl.h",
  "//brave/browser/sync_pairs/pair_sync_service_factory.cc",
  "//brave/browser/sync_pairs/pair_sync_service_factory.h",
]
